# chromacat

./: CLAUDE.md  Cargo.toml  README.md  debug_playground.sh  debug_test.sh  test_hang.sh  test_playground.sh  test_unified.sh
.github/workflows/: cicd.yml
docs/: architectural-map.md  architecture.md  custom-themes.md  demo-playlist.yaml  overview.md  patterns.md  playground-architecture.md  playground-plan.md  playground-vision.md  sample-playlist.yaml
scripts/: release.py
src/: app.rs  cli.rs  cli_format.rs  colorizer.rs  debug_log.rs  demo.rs  error.rs  gradient.rs  input.rs  lib.rs  main.rs  pattern.rs  renderer.rs  streaming.rs  themes.rs
src/demo/: art.rs  generator.rs  mod.rs
src/pattern/: config.rs  engine.rs  mod.rs  params.rs  patterns.rs  registry.rs  utils.rs
src/pattern/patterns/: aurora.rs  checkerboard.rs  diagonal.rs  diamond.rs  fire.rs  horizontal.rs  kaleidoscope.rs  mod.rs  perlin.rs  pixel_rain.rs  plasma.rs  ripple.rs  spiral.rs  wave.rs
src/playground/: mod.rs
src/playlist/: entry.rs  mod.rs  player.rs
src/recipes/: mod.rs
src/renderer/: art_mixer.rs  automix.rs  blend_engine.rs  buffer.rs  config.rs  control.rs  core.rs  error.rs  event_loop.rs  input.rs  mod.rs  mod_old.rs  modulation.rs  pattern_widget.rs  playground.rs  renderer.rs  scheduler.rs  scroll.rs  status_bar.rs  terminal.rs
tests/: app_tests.rs  cli_tests.rs  colorizer_tests.rs  demo_tests.rs  gradient_tests.rs  pattern_aurora_tests.rs  pattern_checkerboard_tests.rs  pattern_diagonal_tests.rs  pattern_diamond_tests.rs  pattern_fire_tests.rs  pattern_horizontal_tests.rs  pattern_integration_tests.rs  pattern_kaleidoscope_tests.rs  pattern_perlin_tests.rs  pattern_plasma_tests.rs  pattern_registry_tests.rs  pattern_ripple_tests.rs  pattern_spiral_tests.rs  pattern_tests.rs  pattern_time_tests.rs  pattern_wave_tests.rs  playlist_tests.rs  renderer_tests.rs  status_bar_tests.rs  terminal_tests.rs  theme_tests.rs
themes/: abstract.yaml  aesthetic.yaml  mood.yaml  nature.yaml  party.yaml  pride.yaml  space.yaml  tech.yaml  theory.yaml
tools/: theme-preview-generator.rs  webp-generator.rs
