[package]
name = "chromacat"
version = "0.2.0"
edition = "2021"
authors = ["Stefanie Jane <stef@hyperbliss.tech>"]
description = "A versatile command-line tool for applying color gradients to text output"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/hyperb1iss/chromacat"
repository = "https://github.com/hyperb1iss/chromacat"
keywords = ["cli", "color", "terminal", "gradient", "text"]
categories = ["command-line-utilities"]
default-run = "chromacat"

[profile.release]
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Optimize for size rather than compile time
opt-level = 3        # Maximum optimization
panic = "abort"      # Remove panic unwinding to reduce binary size
strip = true         # Strip symbols from the binary
debug = false        # No debug info

[dependencies]
anstyle = "1.0.9"
atty = "0.2"
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
colorgrad = "0.7.0"
crossterm = "0.29.0"
env_logger = { version = "0.11.5", default-features = false }
lazy_static = "1.5.0"
log = { version = "0.4", features = ["release_max_level_info"] }
paste = "1.0.15"
rand = "0.9.2"
fastrand = "2.0"
regex = "1.11.2"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_yaml = "0.9"
thiserror = "2.0.16"
unicode-segmentation = "1.10"
unicode-width = "0.2.0"
dirs = "6.0.0"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }

[lib]
name = "chromacat"
path = "src/lib.rs"

[[bin]]
name = "chromacat"
path = "src/main.rs"

# Only include tools when specifically building them
[[bin]]
name = "theme-preview-generator"
path = "tools/theme-preview-generator.rs"
required-features = ["build-tools"]

[[bin]]
name = "webp-generator"
path = "tools/webp-generator.rs"
required-features = ["build-tools"]

# Optional dependencies for tools
[features]
default = []
build-tools = [
    "image",
    "webp-animation",
    "rayon",
]

# Development dependencies
[dev-dependencies]
tempfile = "3.6.0"
timeout = "0.1.0"

# Optional tool dependencies
[dependencies.image]
version = "0.25.4"
optional = true

[dependencies.webp-animation]
version = "0.9"
optional = true

[dependencies.rayon]
version = "1.10.0"
optional = true

[package.metadata.deb]
maintainer = "Stefanie Jane <stef@hyperbliss.tech>"
copyright = "2024, chromacat Contributors <https://github.com/hyperb1iss/chromacat>"
license-file = ["LICENSE", "4"]
extended-description = """
ChromaCat is a turbocharged terminal colorizer written in Rust
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/chromacat", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/chromacat/README", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/chromacat", dest = "/usr/bin/chromacat", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/chromacat/README", mode = "644" },
]
